--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ main .area {
     margin-top: 10px;
 }
 
-main .area .box {
+main .area div {
     background-color: white;
     color: #56baed;
     text-align: center;
@@ -164,6 +164,7 @@ main .area .box {
     text-align: center;
     border-radius: 5px;
     padding: 25px;
+    transition: .4s ease;
 }
 
 .result p {
@@ -179,5 +180,11 @@ main .area .box {
     border: 1px solid #56baed;
     border-radius: 5px;
     padding: 8px 18px;
+    cursor: pointer;
+    transition: .4s ease-in;
+}
+
+.result button:hover {
+    transform: scale(.95);
 }
 /*end section result*/
